kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webfrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webfrontend
  template:
    metadata:
      labels:
        app: webfrontend
    spec:
      containers:
      - name: webfrontend
        image: order-management/frontend-service:latest
        ports:
        - containerPort: 8080
