kubernetes/deliveryservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  type: ClusterIP 
  selector:
    app: delivery-service
  ports:
  - port: 5003
    targetPort: 8080
