kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webfrontend
spec:
  type: ClusterIP
  selector:
    app: webfrontend
  ports:
  - port: 8080
    targetPort: 8080
