kubernetes/yugabyte-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yugabyte
spec:
  type: NodePort
  selector:
    app: yugabyte
  ports:
  - name: ysql
    port: 5433
    targetPort: 5433
  - name: web
    port: 15433
    targetPort: 15433
    nodePort: 30000
